Add border editor tool
* Fix typos
* Fix ini widget data handling
* Fix ini widget naming in the backend
* Add a gap between certain widgets
* Add tooltip hints for menu items
* Add more features to the widgets in the backend
* Expand IniWidgets to support the new tool
* Clean up unnecessary code

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <div id="aboutDialog" class="hidden"></div>
     <div id="yellowNameTool" class="hidden"></div>
+    <div id="borderTool" class="hidden"></div>
 </div>
 <ul id="statusLog"></ul>
 </body>
